--- a/book/scss/_foundation.scss
+++ b/book/scss/_foundation.scss
@@ -1,9 +1,8 @@
 html, body {
 	background: #000;
-	height: 100%
+	height: 100%;
 }
 
-//p:not(.caption) { revisit if you want to make a more storybook version
 .page > p {
 	@extend %visuallyhidden;
 }
